--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,8 @@ body {
 }
 
 nav, .nav-wrapper {
-	background: rgba(250, 128, 114, 0.2);
-	opacity: 0.2%;
+	/*background: rgba(250, 128, 114, 0.2);*/
+	background-color: rgba(84, 110, 122, 0.2)!important;
 	width: 100%;
 	position: absolute;
 	z-index: 2;
@@ -31,7 +31,15 @@ nav ul a {
 	right: 50px;
 	top: 70px;
 	width: 350px;
-	height: 100%;
+	height: 10rem;
 	position: absolute;
 	z-index: 3;
+}
+
+.card.blue-grey.darken-1 {
+	background-color: rgba(84, 110, 122, 0.45)!important;
+}
+
+.card.blue-grey.darken-1:hover {
+	background-color: rgba(84, 110, 122, 0.2)!important;
 }
