--- a/css/maps.css
+++ b/css/maps.css
@@ -19,7 +19,7 @@ html, body {
 	padding: 10px;
 	background: black;
 	height: auto;
-	opacity: .45; /* Set the opacity for a slightly transparent Google Form */ 
+	opacity: .45; /* Set the opacity for slightly transparent */ 
 	color: white;
 	margin-top: 
 }
