--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,17 +7,26 @@ body {
 	padding: 0;
 }
 
-nav, .nav-wrapper {
-	background: rgba(250, 128, 114, 0.2);
-	opacity: 0.2%;
+.toolbar, .nav-wrapper {
+	/*background: rgba(250, 128, 114, 0.2);*/
+	background-color: rgba(84, 110, 122, 0.6)!important;
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	z-index: 2;
+}
+
+.topbar {
+	/*background: rgba(250, 128, 114, 0.2);*/
+	background-color: rgba(0, 0, 0, 0)!important;
 	width: 100%;
 	position: absolute;
 	z-index: 2;
 }
 
-nav ul a {
+/*nav ul a {
 	color: red;
-}
+}*/
 
 #map {
 	height: 100%;
@@ -31,7 +40,16 @@ nav ul a {
 	right: 50px;
 	top: 70px;
 	width: 350px;
-	height: 100%;
+	height: 10rem;
+	margin-bottom: 25px;
 	position: absolute;
 	z-index: 3;
+}
+
+.card.blue-grey.darken-1 {
+	background-color: rgba(84, 110, 122, 0.75)!important;
+}
+
+.card.blue-grey.darken-1:hover {
+	background-color: rgba(84, 110, 122, 0.45)!important;
 }
