--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,10 +40,20 @@ body {
 	right: 50px;
 	top: 70px;
 	width: 350px;
-	height: 10rem;
+	height: 37rem;
 	margin-bottom: 25px;
 	position: absolute;
 	z-index: 3;
+	overflow: scroll;
+}
+
+#widget-bar::-webkit-scrollbar {
+	width: 0px;
+}
+
+#widget-bar::-webkit-scrollbar-track-piece {
+	background-color: transparent;
+	-webkit-border-radius: 6px;
 }
 
 .card.blue-grey.darken-1 {
@@ -53,3 +63,4 @@ body {
 .card.blue-grey.darken-1:hover {
 	background-color: rgba(84, 110, 122, 0.45)!important;
 }
+
