--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,12 @@ body {
 	position: absolute;
 	bottom: 0;
 	z-index: 2;
+	
 }
 
+span.logo-brand.center {
+	font-family: 'Kaushan Script', cursive;
+}
 .topbar {
 	/*background: rgba(250, 128, 114, 0.2);*/
 	background-color: rgba(0, 0, 0, 0)!important;
