--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ body {
 	color: white;
 }
 
+.searchbar {
+	display: none;
+}
+
 .topbar, .toolbar {
 	/*background: rgba(250, 128, 114, 0.2);*/
 	background-color: rgba(84, 110, 122, 0.75)!important;
