--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ nav .brand-logo.center{
 	left: 50px;
 	z-index: 999999999;
 	padding: 14px;
-	-display: none;
+	display: none;
 }
 
 #settings-options label{
