--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
 
 .topbar, .toolbar {
 	/*background: rgba(250, 128, 114, 0.2);*/
-	background-color: rgba(84, 110, 122, 0.75)!important;
+	background-color: rgba(84, 110, 122, 0.75);
 	width: 100%;
 	position: absolute;
 	z-index: 2;
@@ -34,12 +34,16 @@ body {
 	font-family: 'Kaushan Script', cursive;
 
 	opacity: 1;
-	transition: 0.3s linear opacity;
+	transition: 0.3s linear background-color;
 }
 
 .toolbar {
 	bottom: 0;
 	overflow: hidden;
+}
+.toolbar .brand-logo.center{
+	display: none;
+	font-size: 3.4rem;
 }
 
 #login-options{
@@ -118,9 +122,9 @@ nav .brand-logo.center{
 
 #widget-bar {
 	right: 10px;
-	top: 70px;
+	bottom: 70px;
 	width: 350px;
-	height: calc(100vh - 140px);
+	max-height: calc(100vh - 140px);
 	margin-bottom: 25px;
 	position: absolute;
 	z-index: 3;
@@ -176,4 +180,38 @@ div.gm-style div.gmnoprint:nth-child(11){
 }
 div.gm-style div div.gm-iv-address{
 	height: auto !important;
+}
+
+@media screen and (max-width: 600px){
+	.topbar{
+		display: none;
+	}
+	.toolbar{
+		bottom: auto;
+		overflow: visible;
+	}
+	.toolbar .brand-logo.center{
+		display: inline;
+	}
+	#widget-bar{
+		bottom: 0;
+		right: 0;
+		width: 100%;
+		padding: 0px 5px;
+		height: 50vh;
+		margin-bottom: 0;
+	}
+	#login-options, #settings-options{
+		bottom: auto;
+		top: 53px;
+		width: 96%;
+		left: 2%
+	}
+	/* map hacks */
+	div.gm-style div.gmnoprint:nth-child(9){
+		display: none;
+	}
+	div.gm-style div.gmnoprint:nth-child(11){
+		top: 53px !important;
+	}
 }
