small UI changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,12 +122,12 @@ nav .brand-logo.center{
 
 #widget-bar {
 	right: 10px;
-	bottom: 65px;
+	bottom: 74px;
 	width: 350px;
-	max-height: calc(100vh - 138px);
+	max-height: calc(100vh - 146px);
 	position: absolute;
 	z-index: 3;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 
 #widget-bar::-webkit-scrollbar {
@@ -152,6 +152,10 @@ nav .brand-logo.center{
 }
 
 /* map tweaks */
+#map div div.gm-style:nth-child(1) div:nth-child(1),
+#map div div.gm-style:nth-child(1) div:nth-child(2){
+	bottom: 62px !important;
+}
 #map div div.gm-style:nth-child(1) div:nth-child(7),
 #map div div.gm-style:nth-child(1) div:nth-child(8){
 	-display: none; !important;
@@ -159,7 +163,7 @@ nav .brand-logo.center{
 }
 div.gm-style div.gmnoprint:nth-child(9){
 	left: 0px !important;
-	bottom: 157px !important;
+	bottom: 177px !important;
 }
 div.gm-style div.gmnoprint:nth-child(11){
 	top: 63px !important;
@@ -206,6 +210,10 @@ div.gm-style div div.gm-iv-address{
 		left: 2%
 	}
 	/* map hacks */
+	#map div div.gm-style:nth-child(1) div:nth-child(1),
+	#map div div.gm-style:nth-child(1) div:nth-child(2){
+		bottom: 50vh !important;
+	}
 	div.gm-style div.gmnoprint:nth-child(9){
 		display: none;
 	}
