--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,9 +52,10 @@ body {
 	background-color: rgba(0, 0, 0, 0.1);
 }
 
-ul#slide-out a{
+ul#slide-out a i{
 	text-align: center;
 	cursor: pointer;
+	color: #5f7c88;
 }
 
 /* logged in items */
