--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,14 @@ body {
 	display: none;
 }
 
+#pac-input::-webkit-input-placeholder {
+	font-family: 'Helvetica', sans-serif;
+}
+
+input {
+	font-family: 'Helvetica', sans-serif;
+}
+
 .topbar, .toolbar {
 	/*background: rgba(250, 128, 114, 0.2);
 	background-color: rgba(84, 110, 122, 0.75);*/
